--- a/index.html
+++ b/index.html
@@ -1,64 +1,182 @@
-<!doctype html>
+
 <html>
-  <head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="chrome=1">
-    <title>Flexone by gegeemaa</title>
+<head>
+<title>Nice and Free CSS Template 1</title>
+<style type="text/css" media="screen">
 
-    <link rel="stylesheet" href="stylesheets/styles.css">
-    <link rel="stylesheet" href="stylesheets/github-light.css">
-    <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
-    <!--[if lt IE 9]>
-    <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
-    <![endif]-->
-  </head>
-  <body>
-    <div class="wrapper">
-      <header>
-        <h1>Flexone</h1>
-        <p></p>
+body {
+  background: #7D9191;
+  width: 100%;
+  margin: 00px;
+  padding: 00px;
+}
+nav, footer {
+  padding: 10px;
+  line-height: 60px;
+  background-color: #001A33;
+  color: white;
+  margin-bottom: 10px;
+}
 
-        <p class="view"><a href="https://github.com/gegeemaa/FlexOne">View the Project on GitHub <small>gegeemaa/FlexOne</small></a></p>
+.whole {
+  margin: 1em auto;
+  width: 95%;
+}
+
+.main {
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex;
+  flex-direction:row;
+
+}
+.article {
+ 
+  display: flex;
+  flex-flow: row wrap;
+  /* width: 77.953%; */
+} 
+article {
+ -webkit-flex-grow: 1;
+          flex-grow: 1;
+  -webkit-flex-shrink: 1;
+          flex-shrink: 1;
+  width: 300px;
+  /*width: 30.3030%;*/
+  margin-right: 10px;
+  padding: 10px;
+  background: white;
+  margin-bottom: 10px;
+  box-sizing: border-box;
+  }
+
+.sidebar {
+  min-width: 280px;
+  background: rgb(31,56,100);
+
+  padding: 10px;
+  box-sizing: border-box;
+  -webkit-flex-grow: 1;
+  flex-grow: 1;
+  color: white;   
+  margin-bottom: 10px;
+
+}
+footer {
+  clear: left;
+  border: 1px solid black;
+}
+@media all and (max-width: 650px) {
+  .main {
+    -webkit-flex-wrap: wrap;
+        -ms-flex-wrap: wrap;
+            flex-wrap: wrap;
+  }
+  article {
+      -webkit-flex: 1 100%; /100% gedeg ni daraagin div-iig shine line –aas eheluulakhiin tuld/
+  -moz-flex: 1 100%;
+  -ms-flex: 1 100%;
+  flex: 1 100%;
+  margin-right:00px;
+
+  }
+  .sidebar {
+      -webkit-flex: 1 100%; /100% gedeg ni daraagin div-iig shine line –aas eheluulakhiin tuld/
+  -moz-flex: 1 100%;
+  -ms-flex: 1 100%;
+  flex: 1 100%;
+
+  }  
+
+ /* .main {
+    -webkit-flex-wrap: wrap;
+        -ms-flex-wrap: wrap;
+            flex-wrap: wrap;
+  }
+  .sidebar {
+    -webkit-box-flex: 1;
+    -webkit-flex-grow: 1;
+        -ms-flex-positive: 1;
+            flex-grow: 1;
+  }
+  article {
+    width: 100%;
+    margin-right: 0;
+  }
+} */
+
+</style>
+</head>
 
 
-        <ul>
-          <li><a href="https://github.com/gegeemaa/FlexOne/zipball/master">Download <strong>ZIP File</strong></a></li>
-          <li><a href="https://github.com/gegeemaa/FlexOne/tarball/master">Download <strong>TAR Ball</strong></a></li>
-          <li><a href="https://github.com/gegeemaa/FlexOne">View On <strong>GitHub</strong></a></li>
-        </ul>
-      </header>
-      <section>
-        <h3>
-<a id="welcome-to-github-pages" class="anchor" href="#welcome-to-github-pages" aria-hidden="true"><span class="octicon octicon-link"></span></a>Welcome to GitHub Pages.</h3>
+<body>
+<div class="whole">
+<header>Flex 3: Minimalist</header>
+    <nav>
+      Menu Item | Menu Item | Menu Item | Menu Item | Menu Item
+    </nav>
 
-<p>This automatic page generator is the easiest way to create beautiful pages for all of your projects. Author your page content here <a href="https://guides.github.com/features/mastering-markdown/">using GitHub Flavored Markdown</a>, select a template crafted by a designer, and publish. After your page is generated, you can check out the new <code>gh-pages</code> branch locally. If you’re using GitHub Desktop, simply sync your repository and you’ll see the new branch.</p>
 
-<h3>
-<a id="designer-templates" class="anchor" href="#designer-templates" aria-hidden="true"><span class="octicon octicon-link"></span></a>Designer Templates</h3>
+    <section class="main">
+      
+      <section class="article">
+        <article>
+          <h1> Title One</h1>
+          <p> 'Well, I can't show it you myself,' the Mock Turtle said: 'I'm too stiff. And the Gryphon never learnt it.' 'Hadn't time,' said the Gryphon: 'I went to the Classics master, though. He was an old crab, HE was.' 'I never went to him,' the Mock Turtle said with a sigh: 'he taught Laughing and Grief, they used to say.' 'So he did, so he did,' said the Gryphon, sighing in his turn; and both creatures hid their faces in their paws. 'And how many hours a day did you do lessons?' said Alice, in a hurry to change the subject. 'Ten hours the first day,' said the Mock Turtle: 'nine the next, and so on.' 'What a curious plan!' exclaimed Alice. 'That's the reason they're called lessons,' </p>
 
-<p>We’ve crafted some handsome templates for you to use. Go ahead and click 'Continue to layouts' to browse through them. You can easily go back to edit your page before publishing. After publishing your page, you can revisit the page generator and switch to another theme. Your Page content will be preserved.</p>
+        </article>
 
-<h3>
-<a id="creating-pages-manually" class="anchor" href="#creating-pages-manually" aria-hidden="true"><span class="octicon octicon-link"></span></a>Creating pages manually</h3>
+        <article>
+          <h1> Title Two</h1>
+          <p> 'Ten hours the first day,' said the Mock Turtle: 'nine the next, and so on.' 'What a curious plan!' exclaimed Alice. 'That's the reason they're called lessons,' the Gryphon remarked: 'because they lessen from day to day.' This was quite a new idea to Alice, and she thought it over a little before she made her next remark. 'Then the eleventh day must have been a holiday?' 'Of course it was,' said the Mock Turtle. 'And how did you manage on the twelfth?' Alice went on eagerly. 'That's enough about lessons,' the Gryphon interrupted in a very decided tone: 'tell her something about the games now.  </p>
 
-<p>If you prefer to not use the automatic generator, push a branch named <code>gh-pages</code> to your repository to create a page manually. In addition to supporting regular HTML content, GitHub Pages support Jekyll, a simple, blog aware static site generator. Jekyll makes it easy to create site-wide headers and footers without having to copy them across every page. It also offers intelligent blog support and other advanced templating features.</p>
+        </article>
+        <article>
+          <h1> Title Three</h1>
+          <p> At last the Mock Turtle recovered his voice, and, with tears running down his cheeks, he went on again:â€” 'You may not have lived much under the seaâ€”' ('I haven't,' said Alice)â€”'and perhaps you were never even introduced to a lobsterâ€”' (Alice began to say 'I once tastedâ€”' but checked herself hastily, and said 'No, never') '  </p>
 
-<h3>
-<a id="authors-and-contributors" class="anchor" href="#authors-and-contributors" aria-hidden="true"><span class="octicon octicon-link"></span></a>Authors and Contributors</h3>
+        </article>
+        <article>
+          <h1> Title Four</h1>
+          <p> â€”so you can have no idea what a delightful thing a Lobster Quadrille is!' 'No, indeed,' said Alice. 'What sort of a dance is it?' 'Why,' said the Gryphon, 'you first form into a line along the sea-shoreâ€”' 'Two lines!' cried the Mock Turtle. 'Seals, turtles, salmon, and so on; then, when you've cleared all the jelly-fish out of the wayâ€”' 'THAT generally takes some time,' interrupted the Gryphon. 'â€”you advance twiceâ€”' 'Each with a lobster as a partner!' cried the Gryphon. 'Of course,' the Mock Turtle said: 'advance twice, set to partnersâ€”' 'â€”change lobsters, and retire in same order,' continued the Gryphon. </p>
 
-<p>You can <a href="https://github.com/blog/821" class="user-mention">@mention</a> a GitHub username to generate a link to their profile. The resulting <code>&lt;a&gt;</code> element will link to the contributor’s GitHub Profile. For example: In 2007, Chris Wanstrath (<a href="https://github.com/defunkt" class="user-mention">@defunkt</a>), PJ Hyett (<a href="https://github.com/pjhyett" class="user-mention">@pjhyett</a>), and Tom Preston-Werner (<a href="https://github.com/mojombo" class="user-mention">@mojombo</a>) founded GitHub.</p>
+        </article>
+         <article>
+          <h1> Title Five</h1>
+          <p> 'I've forgotten the words.' So they began solemnly dancing round and round Alice, every now and then treading on her toes when they passed too close, and waving their forepaws to mark the time, while the Mock Turtle sang this, very slowly and sadly:â€” '"Will you walk a little faster?" said a whiting to a snail. "There's a porpoise close behind us, and he's treading on my tail. See how eagerly the lobsters and the turtles  </p>
 
-<h3>
-<a id="support-or-contact" class="anchor" href="#support-or-contact" aria-hidden="true"><span class="octicon octicon-link"></span></a>Support or Contact</h3>
+        </article>
+         <article>
+          <h1> Title Six</h1>
+          <p> 'Each with a lobster as a partner!' cried the Gryphon. 'Of course,' the Mock Turtle said: 'advance twice, set to partnersâ€”' 'â€”change lobsters, and retire in same order,' continued the Gryphon. 'Then, you know,' the Mock Turtle went on, 'you throw theâ€”' 'The lobsters!' shouted the Gryphon, with a bound into the air. 'â€”as far out to sea as you canâ€”' 'Swim after them!' screamed the Gryphon. 'Turn a somersault in the sea!' cried the Mock Turtle, capering wildly </p>
 
-<p>Having trouble with Pages? Check out our <a href="https://help.github.com/pages">documentation</a> or <a href="https://github.com/contact">contact support</a> and we’ll help you sort it out.</p>
+        </article>
+
+        <article>
+          <h1> Title Seven</h1>
+          <p> 'Each with a lobster as a partner!' cried the Gryphon. 'Of course,' the Mock Turtle said: 'advance twice, set to partnersâ€”' 'â€”change lobsters, and retire in same order,' continued the Gryphon. 'Then, you know,' the Mock Turtle went on, 'you throw theâ€”' 'The lobsters!' shouted the Gryphon, with a bound into the air. 'â€”as far out to sea as you canâ€”' 'Swim after them!' screamed the Gryphon. 'Turn a somersault in the sea!' cried the Mock Turtle, capering wildly </p>
+
+        </article>
+        <article>
+          <h1> Title Eight</h1>
+          <p> 'Each with a lobster as a partner!' cried the Gryphon. 'Of course,' the Mock Turtle said: 'advance twice, set to partnersâ€”' 'â€”change lobsters, and retire in same order,' continued the Gryphon. 'Then, you know,' the Mock Turtle went on, 'you throw theâ€”' 'The lobsters!' shouted the Gryphon, with a bound into the air. 'â€”as far out to sea as you canâ€”' 'Swim after them!' screamed the Gryphon. 'Turn a somersault in the sea!' cried the Mock Turtle, capering wildly </p>
+
+        </article>
       </section>
-      <footer>
-        <p>This project is maintained by <a href="https://github.com/gegeemaa">gegeemaa</a></p>
-        <p><small>Hosted on GitHub Pages &mdash; Theme by <a href="https://github.com/orderedlist">orderedlist</a></small></p>
-      </footer>
-    </div>
-    <script src="javascripts/scale.fix.js"></script>
-    
-  </body>
+
+      <div class="sidebar">
+        <h1>The SideBar</h1>
+        <p>The Filler Text: Courtesy of Fillerati
+        The Title: Alice In Wonderland
+        The Author: Lewis Carrol</p>
+      </div>
+
+    </section>
+    <footer>
+      Copyright © Footer
+    </footer>
+</div>
+</body>
+
 </html>
